--- a/Public/slyles/app.css
+++ b/Public/slyles/app.css
@@ -564,8 +564,32 @@ video {
   font-display: swap;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
+}
+
+.bottom-\[-18px\]{
+  bottom: -18px;
+}
+
+.left-\[-12px\]{
+  left: -12px;
+}
+
+.right-\[-12px\]{
+  right: -12px;
+}
+
+.top-\[-18px\]{
+  top: -18px;
+}
+
+.-z-10{
+  z-index: -10;
 }
 
 .col-span-2{
@@ -629,6 +653,10 @@ video {
   height: 1.5rem;
 }
 
+.h-60{
+  height: 15rem;
+}
+
 .h-full{
   height: 100%;
 }
@@ -647,6 +675,10 @@ video {
 
 .w-6{
   width: 1.5rem;
+}
+
+.w-60{
+  width: 15rem;
 }
 
 .w-full{
@@ -686,22 +718,35 @@ video {
        column-gap: 1rem;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
 .rounded-3xl{
   border-radius: 1.5rem;
+}
+
+.rounded-full{
+  border-radius: 9999px;
 }
 
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
+.bg-circle-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 245 250 / var(--tw-bg-opacity));
+}
+
+.bg-circle-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 209 255 / var(--tw-bg-opacity));
+}
+
 .bg-lightBlue-100{
   --tw-bg-opacity: 1;
   background-color: rgb(218 240 254 / var(--tw-bg-opacity));
-}
-
-.bg-lightBlue-150{
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 218 249 / var(--tw-bg-opacity));
 }
 
 .bg-lightBlue-250{
@@ -747,28 +792,25 @@ video {
   color: rgb(152 246 255 / var(--tw-text-opacity));
 }
 
-.shadow-btnShadow{
-  --tw-shadow: inset 0 0 11px 1px rgba(250,254,255,1);
-  --tw-shadow-colored: inset 0 0 11px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-equalShadow{
-  --tw-shadow: inset 0 0 11px 1px rgba(152,246,255,1);
-  --tw-shadow-colored: inset 0 0 11px 1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.backdrop-blur-xl{
-  --tw-backdrop-blur: blur(24px);
+.backdrop-blur-3xl{
+  --tw-backdrop-blur: blur(64px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.hover\:shadow-none:hover{
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.hover\:bg-lightBlue-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(177 205 223 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-lightBlue-650:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(117 188 244 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-lightBlue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 153 241 / var(--tw-bg-opacity));
 }
 
 .dark\:block:is(.dark *){
@@ -779,14 +821,19 @@ video {
   display: none;
 }
 
+.dark\:bg-circleDark-100:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 62 101 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-circleDark-200:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 67 98 / var(--tw-bg-opacity));
+}
+
 .dark\:bg-darkBlue-150:is(.dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(15 31 44 / var(--tw-bg-opacity));
-}
-
-.dark\:bg-darkBlue-200:is(.dark *){
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 41 56 / var(--tw-bg-opacity));
 }
 
 .dark\:bg-darkBlue-300:is(.dark *){
@@ -817,4 +864,19 @@ video {
 .dark\:text-darkBlue-500:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(141 212 255 / var(--tw-text-opacity));
+}
+
+.dark\:hover\:bg-darkBlue-550:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 70 91 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-darkBlue-600:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 119 228 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-darkBlue-650:hover:is(.dark *){
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 103 205 / var(--tw-bg-opacity));
 }
