--- a/Public/slyles/app.css
+++ b/Public/slyles/app.css
@@ -781,6 +781,14 @@ video {
   padding: 1.75rem;
 }
 
+.pt-1\.5{
+  padding-top: 0.375rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
 .font-RobotoBold{
   font-family: Roboto Bold;
 }
