--- a/Public/slyles/app.css
+++ b/Public/slyles/app.css
@@ -612,6 +612,10 @@ video {
   margin-bottom: 1rem;
 }
 
+.mb-1\.5{
+  margin-bottom: 0.375rem;
+}
+
 .block{
   display: block;
 }
@@ -635,6 +639,10 @@ video {
 
 .h-12{
   height: 3rem;
+}
+
+.h-16{
+  height: 4rem;
 }
 
 .h-32{
@@ -681,8 +689,32 @@ video {
   width: 100%;
 }
 
-.w-96{
-  width: 24rem;
+.w-\[calc\(100\%\+2rem\)\]{
+  width: calc(100% + 2rem);
+}
+
+.w-\[calc\(100\%\+5rem\)\]{
+  width: calc(100% + 5rem);
+}
+
+.w-\[calc\(100\%\+4rem\)\]{
+  width: calc(100% + 4rem);
+}
+
+.w-\[calc\(100\%\+1rem\)\]{
+  width: calc(100% + 1rem);
+}
+
+.w-\[calc\(100\%\+3rem\)\]{
+  width: calc(100% + 3rem);
+}
+
+.max-w-\[calc\(15rem\+2rem\)\]{
+  max-width: calc(15rem + 2rem);
+}
+
+.max-w-60{
+  max-width: 15rem;
 }
 
 .cursor-pointer{
@@ -699,6 +731,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.items-end{
+  align-items: flex-end;
 }
 
 .items-center{
@@ -720,6 +756,18 @@ video {
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.overflow-y-scroll{
+  overflow-y: scroll;
+}
+
+.break-all{
+  word-break: break-all;
 }
 
 .rounded-3xl{
@@ -764,10 +812,6 @@ video {
   background-color: rgb(26 172 255 / var(--tw-bg-opacity));
 }
 
-.bg-transparent{
-  background-color: transparent;
-}
-
 .p-7{
   padding: 1.75rem;
 }
@@ -780,18 +824,34 @@ video {
   padding-top: 0.375rem;
 }
 
+.pr-12{
+  padding-right: 3rem;
+}
+
+.pb-1{
+  padding-bottom: 0.25rem;
+}
+
+.pb-1\.5{
+  padding-bottom: 0.375rem;
+}
+
+.text-end{
+  text-align: end;
+}
+
 .font-RobotoBold{
   font-family: Roboto Bold;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-gray-150{
-  --tw-text-opacity: 1;
-  color: rgb(120 136 149 / var(--tw-text-opacity));
 }
 
 .text-lightBlue-200{
@@ -809,16 +869,20 @@ video {
   color: rgb(152 246 255 / var(--tw-text-opacity));
 }
 
+.text-lightBlue-550{
+  --tw-text-opacity: 1;
+  color: rgb(46 104 136 / var(--tw-text-opacity));
+}
+
+.text-lightBlue-750{
+  --tw-text-opacity: 1;
+  color: rgb(177 200 218 / var(--tw-text-opacity));
+}
+
 .backdrop-blur-3xl{
   --tw-backdrop-blur: blur(64px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.transition-all{
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .hover\:bg-lightBlue-600:hover{
@@ -874,6 +938,11 @@ video {
   background-color: rgb(35 142 248 / var(--tw-bg-opacity));
 }
 
+.dark\:text-darkBlue-100:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(254 255 255 / var(--tw-text-opacity));
+}
+
 .dark\:text-darkBlue-250:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(65 151 202 / var(--tw-text-opacity));
@@ -887,6 +956,11 @@ video {
 .dark\:text-darkBlue-500:is(.dark *){
   --tw-text-opacity: 1;
   color: rgb(141 212 255 / var(--tw-text-opacity));
+}
+
+.dark\:text-gray-150:is(.dark *){
+  --tw-text-opacity: 1;
+  color: rgb(120 136 149 / var(--tw-text-opacity));
 }
 
 .dark\:hover\:bg-darkBlue-550:hover:is(.dark *){
