--- a/Public/slyles/app.css
+++ b/Public/slyles/app.css
@@ -836,6 +836,14 @@ video {
   padding-bottom: 0.375rem;
 }
 
+.text-justify{
+  text-align: justify;
+}
+
+.text-start{
+  text-align: start;
+}
+
 .text-end{
   text-align: end;
 }
