--- a/Public/slyles/app.css
+++ b/Public/slyles/app.css
@@ -612,8 +612,16 @@ video {
   margin-bottom: 1rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
+}
+
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -719,6 +727,14 @@ video {
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
+}
+
+.gap-1\.5{
+  gap: 0.375rem;
 }
 
 .gap-x-4{
@@ -830,6 +846,20 @@ video {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .text-lightBlue-200{
